# tvmaze

./: Dockerfile  Makefile  db.sqlite  docker-compose-dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py  utils.py
app/api/: deps.py  session.py
app/api/endpoints/: __init__.py  episode.py  job.py  user.py
app/api/schema/: __init__.py  action.py  job.py  message.py  tvmaze.py  user.py
app/db/: session.py
app/db/models/: __init__.py  job.py  tvmaze.py  user.py  user_episode.py
app/job/: crawl.py
postman/: TVMAZE.postman_collection.json  tvmaze.postman_environment.json
scripts/: cronjob.sh  crontab  gen_sample_db.sh  start-server.sh  test.sh
tests/: conftest.py  test_utils.py
tests/api/: test_0_user.py  test_episode.py  test_job.py  test_session.py
