[tool.poetry]
name = "tvmaze"
version = "0.1.0"
description = ""
authors = ["quicksort <quicksort@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
sqlalchemy = "^2.0.20"
pytest = "^7.4.2"
pydantic-settings = "^2.0.3"
httpx = "^0.25.0"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
emails = "^0.6"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^2.5.2"}
bcrypt = "^4.0.1"
fastapi-sessions = "^0.3.2"
redis = "^5.0.1"
pytest-asyncio = "^0.21.1"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
pytest = "^7.4.2"
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
